commit to master
内容更新

--- a/app.json
+++ b/app.json
@@ -1,9 +1,7 @@
 {
   "pages":[
     "pages/navigation/index/index",
-    "pages/navigation/dynamic/dynamic",
     "pages/navigation/clock/clock",
-    "pages/navigation/mine/mine",
 
     "pages/logs/logs"
     
@@ -25,20 +23,10 @@
       "iconPath": "/common/image/home.png",
       "selectedIconPath": "/common/image/homes.png"
     }, {
-      "pagePath": "pages/navigation/dynamic/dynamic",
-      "text": "动态",
-      "iconPath": "/common/image/order.png",
-      "selectedIconPath": "/common/image/orders.png"
-    }, {
       "pagePath": "pages/navigation/clock/clock",
-      "text": "打卡",
+      "text": "搜索",
       "iconPath": "/common/image/daka.png",
       "selectedIconPath": "/common/image/dakas.png"
-    }, {
-      "pagePath": "pages/navigation/mine/mine",
-      "text": "我的",
-      "iconPath": "/common/image/member.png",
-      "selectedIconPath": "/common/image/members.png"
     }]
   },
   "style": "v2",
